deploy/k8s/infra/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cvgen
---
apiVersion: v1
kind: Namespace
metadata:
  name: flagger-system
